2002-11-26  Richard Williamson   <rjw@apple.com>

        Remove debugging code.  Could be cause of performance regresssion.
        * kjs/nodes.cpp:
        (FunctionCallNode::evaluate):

        Restire attributes correctly.
        * kjs/property_map.cpp:

2002-11-25  Richard Williamson   <rjw@apple.com>

        Use delete[] (not delete) operator to delete array.
        
        * kjs/property_map.cpp:

2002-11-25  Richard Williamson   <rjw@apple.com>

        Added debugging info.  Fixed property map save function.
        
        * kjs/nodes.cpp:
        (FunctionCallNode::evaluate):
        * kjs/property_map.cpp:

2002-11-25  Richard Williamson   <rjw@apple.com>

        Changes for back/forward.  Currently disabled.

        * kjs/property_map.cpp:
        * kjs/property_map.h:

2002-11-25  Darin Adler  <darin@apple.com>

        * kjs/property_map.cpp: Rearrange code a little bit and tweak indentation.
	This might provide a tiny speedup because we don't look at the single entry
	any more in cases where the _table pointer is non-0.

2002-11-24  Darin Adler  <darin@apple.com>

	- changed ScopeChain to not ref each item in the chain, and use
        marking instead; gains 1% on JavaScript iBench

        * kjs/context.h: Return chain by reference.
        * kjs/internal.cpp: (ContextImp::mark): Mark the scope chain.
        * kjs/interpreter.cpp: (Context::scopeChain): Return chain by reference.
        * kjs/interpreter.h: Make some Context methods inline.
        * kjs/nodes.cpp:
        (ThisNode::evaluate): Get at ContextImp directly.
        (ResolveNode::evaluateReference): Ditto.
        (VarDeclNode::evaluate): Ditto.
        (VarDeclNode::processVarDecls): Ditto.
        (FuncDeclNode::processFuncDecl): Pass ScopeChain directly to avoid copying.
        (FuncExprNode::evaluate): Ditto.
        * kjs/object.cpp: Make scope and setScope inline.
        * kjs/object.h: Make scope return a chain by reference. Make scope and